--- a/src/main/java/com/ignacio/proyectosensores/Main.form
+++ b/src/main/java/com/ignacio/proyectosensores/Main.form
@@ -9,18 +9,21 @@
             <Property name="text" type="java.lang.String" value="File"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="mi_crearLugar">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Lugar"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mi_crearLugarActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="mi_crearLugar">
+            <MenuItem class="javax.swing.JMenuItem" name="mi_crearMaquina">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jMenuItem2"/>
+                <Property name="text" type="java.lang.String" value="Maquina"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mi_crearMaquinaActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
