Se permite actualizar y se crea un buscador en crear tipo unidad

--- a/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearTipoUnidad.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearTipoUnidad.form
@@ -55,6 +55,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_nombre">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tf_nombreKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="b_crear">
       <Properties>
