Buscador en crear lugar y tipo sensor

--- a/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearLugar.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearLugar.form
@@ -58,6 +58,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_nombre">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tf_nombreKeyReleased"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
