--- a/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearMaquina.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearMaquina.form
@@ -39,8 +39,8 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Creaci&#xf3;n"/>
+          <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
+            <EtchetBorder/>
           </Border>
         </Property>
       </Properties>
@@ -60,7 +60,7 @@
                           <EmptySpace min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="cb_lugar" alignment="0" max="32767" attributes="0"/>
-                              <Component id="tf_nombre" alignment="0" pref="408" max="32767" attributes="0"/>
+                              <Component id="tf_nombre" alignment="0" pref="432" max="32767" attributes="0"/>
                               <Component id="jScrollPane2" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -123,7 +123,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cb_lugarActionPerformed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Lugar&gt;"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JButton" name="b_crear">
