--- a/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearSensor.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearSensor.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="escala">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[500, 500]"/>
@@ -125,6 +129,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_escala">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Por ejemplo 2*x+1, donde cada oparacion debe dejarse expresada explicitamente"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
@@ -140,11 +147,18 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="rb_positivo">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="escala"/>
+        </Property>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="Positiva"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="rb_negativo">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="escala"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Negativa"/>
       </Properties>
     </Component>
@@ -185,7 +199,6 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="cb_maquina">
       <Properties>
-        <Property name="editable" type="boolean" value="true"/>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
         </Property>
@@ -198,6 +211,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="b_guardarActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
