--- a/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearSensor.form
+++ b/src/main/java/com/ignacio/proyectosensores/GUI/JPCrearSensor.form
@@ -41,8 +41,8 @@
                           <Component id="jLabel2" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="cb_sensor" alignment="0" max="32767" attributes="0"/>
                           <Component id="cb_unidad" alignment="0" max="32767" attributes="0"/>
                           <Component id="tf_nombre" alignment="0" max="32767" attributes="0"/>
@@ -53,18 +53,18 @@
                               <Component id="rb_negativo" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="tf_descripcion" alignment="0" max="32767" attributes="0"/>
-                          <Component id="cb_maquina" pref="383" max="32767" attributes="0"/>
+                          <Component id="cb_maquina" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="b_guardar" max="32767" attributes="0"/>
                           <Component id="jScrollPane1" pref="488" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -122,6 +122,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_nombre">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tf_nombreKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
